belongs to validation in table and tx
